--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -30,6 +30,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           playwright install chromium
+          npx playwright install-deps chromium
 
       - name: Run OLX Scraper
         env:
