--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -31,8 +31,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          playwright install chromium
-          npx playwright install-deps chromium
+          python -m playwright install --with-deps chromium
 
       - name: Run OLX Scraper
         env:
